--- a/board_front/package.json
+++ b/board_front/package.json
@@ -2,6 +2,12 @@
   "name": "board_front",
   "version": "0.1.0",
   "private": true,
+
+  "packageManager": "pnpm@9.15.9",
+  "engines": {
+    "node": "20.20.0"
+  },
+
   "scripts": {
     "dev": "next dev",
     "build": "next build",
